js/js.translator/testData/incremental/invalidation/changedDependencyThroughUserLib/externalLib/file2.1.kt
fun foo2(): Int = 128
